load-tests/interceptors/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interceptors
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: interceptors-sv
                port:
                  number: 9090
